--- a/src/pages/page-routes/page-routes.module.css
+++ b/src/pages/page-routes/page-routes.module.css
@@ -1,3 +1,6 @@
+.PageRoutesContainer {
+}
+
 .topAppBarTitle {
     cursor: pointer;
 }
